--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,24 @@ h1 {
   z-index: -1;
 }
 
+.app .search {
+  text-align: center;
+  padding: 1rem;
+}
+
+.app input {
+  padding: .7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: 1px solid rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.1);
+  color: #f7f7f7
+}
+
+::placeholder {
+  color: #f7f7f7
+}
+
 .container {
   max-width: 700px;
   height: 700px;
