--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ h1 {
 
 .app:before {
   content: '';
-  background: url('./assets/BG.jpg') no-repeat center center/cover;
+  background: url('./assets/R.jpg') no-repeat center center/cover;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -70,7 +70,7 @@ h1 {
   top: 10%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .app .top {
